@@ -607,4 +607,15 @@ test treeview-10.1 "Root node properly initialized (#1541739)" -setup {
     destroy .tv
 }
 
+test treeview-3006842 "Null bindings" -setup {
+    ttk::treeview .tv -show tree
+} -body {
+    .tv tag bind empty <ButtonPress-1> {}
+    .tv insert {} end -text "Click me" -tags empty
+    event generate .tv <ButtonPress-1> -x 10 -y 10
+    .tv tag bind empty
+} -result {} -cleanup {
+    destroy .tv
+}
+
 tcltest::cleanupTests
